Bug fix: Clippings Manager details pane shortcut key button is misaligned
(issue #246)

--- a/src/pages/clippingsMgr.css
+++ b/src/pages/clippingsMgr.css
@@ -787,18 +787,34 @@ body[data-os="mac"] .shortcut-key-tbl > tr > td:first-of-type {
 #options-bar > #shortcut-key-select {
     order: 1;
     flex: 0 1 auto;
-    margin-top: 3px;
+
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-content: center;
+    align-items: center;
+}
+
+#options-bar > #shortcut-key-select #clipping-key-lbl {
+    order: 1;
+    flex: 0 1 auto;
+    margin-right: 8px;
 }
 
 #options-bar > #shortcut-key-select > #clipping-key {
+    order: 2;
+    flex: 0 1 auto;
     margin-bottom: 0;
     font-size: 12px;
 }
 
 #options-bar > #shortcut-key-select > #show-shortcut-list {
+    order: 3;
+    flex: 0 1 auto;
     width: 28px;
     height: 24px;
-    vertical-align: 5px;
+    margin-left: 4px;
+
     background-image: var(--url-toolbar-btn-img-shct-keys);
     background-position: center;
     background-repeat: no-repeat;
